@@ -1,3 +1,8 @@
+2012-02-15 S. Thiell <stephane.thiell@cea.fr>
+
+	* Clush.py: Add --topology <file> hidden option to enable V2 tree
+	propagation technology preview.
+
 2012-02-01 S. Thiell <stephane.thiell@cea.fr>
 
 	* RangeSet.py: Fix RangeSet.__setstate__() for proper object unpickling
